--- a/homework.ipynb
+++ b/homework.ipynb
@@ -761,7 +761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 77,
       "metadata": {
         "id": "cRxzzoUbZI0y"
       },
@@ -770,23 +770,23 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p8(z):\n",
-        "    return np.exp(z) / np.sum(np.exp(z), axis=1)"
+        "    return np.exp(z) / np.sum(np.exp(z), axis=1, keepdims=True)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 78,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "array([[3.33333333e-01, 6.65240956e-01, 3.35447394e-04],\n",
-              "       [4.51117611e-02, 2.44728471e-01, 3.35447394e-04],\n",
-              "       [4.51117611e-02, 3.02018927e-05, 9.99954587e-01]])"
+              "array([[3.33333333e-01, 3.33333333e-01, 3.33333333e-01],\n",
+              "       [9.00305732e-02, 2.44728471e-01, 6.65240956e-01],\n",
+              "       [4.53978680e-05, 1.52292881e-08, 9.99954587e-01]])"
             ]
           },
-          "execution_count": 34,
+          "execution_count": 78,
           "metadata": {},
           "output_type": "execute_result"
         }
